--- a/FinPlan.Web/Components/Shared/RetirementProjection.razor
+++ b/FinPlan.Web/Components/Shared/RetirementProjection.razor
@@ -150,6 +150,7 @@
                 <th colspan="1" class="col-income-sources" style="background-color: rgba(5,150,105,0.08); border-right: 2px solid #d1d5db; text-align: center;">Total Inflow</th>
 
                 <th colspan="3" class="col-ending-balances" style="background-color: rgba(107,114,128,0.08); text-align: center;">Ending Balances</th>
+                <th colspan="1" class="col-ending-balances" style="background-color: rgba(107,114,128,0.08); text-align: center;">Total Ending Balance</th>
 
                 <th colspan="4" class="col-ending-balances" style="background-color: rgba(107,114,128,0.08); text-align: center;">Tax (Growth & Income)</th>
 
@@ -350,6 +351,11 @@
                     }
                 </th>
 
+                <th style="border-right: 2px solid #d1d5db;">
+                    <span class="bi bi-info-circle info-icon" tabindex="0" title="Click for more info"></span>
+                    @Numbered("16.5")Total Ending Balance
+                </th>
+
 
                 <th style="border-right: 2px solid #d1d5db;">
                     <span class="bi bi-info-circle info-icon" @onclick="() => showToolTipTaxesPaid = !showToolTipTaxesPaid" tabindex="0" title="Click for more info"></span>
@@ -491,6 +497,10 @@
                     </td>
                     <td class="text-end col-ending-balances" style="font-size:0.78rem; background-color: rgba(107, 114, 128, 0.08); font-weight:600; text-align: right; font-variant-numeric: tabular-nums;">
                         @row.EndingRoth.ToString("C0")
+                    </td>
+
+                    <td class="text-end col-ending-balances" style="font-size:0.78rem; background-color: rgba(107, 114, 128, 0.08); font-weight:600; text-align: right; font-variant-numeric: tabular-nums; border-right: 2px solid #d1d5db;">
+                        @( (row.EndingTaxable + row.EndingTraditional + row.EndingRoth).ToString("C0") )
                     </td>
 
 
